# foas_plugin

./: .travis.yml  CMakeLists.txt  README.md
include/foas/plugin/: Plugin.h  PluginInstance.h  PluginManager.h  PluginTemplate.h
src/plugin/: Plugin.cpp  PluginInstance.cpp  PluginManager.cpp  PluginTemplate.cpp
src/test/: SampleTest.cpp
